Zeichnung/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\Java\jdk1.8.0_102\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\mysql-connector-java-5.1.15-bin.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Program Files (x86)\BlueJ\lib\userlib\QTJava.zip;C:\Program Files (x86)\BlueJ\lib\userlib\SuMEreignis.jar;C:\Program Files (x86)\BlueJ\lib\userlib\SuMKern.jar;C:\Program Files (x86)\BlueJ\lib\userlib\SuMKomponenten.jar;C:\Program Files (x86)\BlueJ\lib\userlib\SuMMultimedia.jar;C:\Program Files (x86)\BlueJ\lib\userlib\SuMNetz.jar;C:\Program Files (x86)\BlueJ\lib\userlib\SuMSQL.jar;C:\Program Files (x86)\BlueJ\lib\userlib\SuMStrukturen.jar;C:\Program Files (x86)\BlueJ\lib\userlib\SuMWerkzeuge.jar;C:\Program Files (x86)\BlueJ\lib\userlib\xpp3_min-1.1.3.4.I.jar;C:\Program Files (x86)\BlueJ\lib\userlib\xstream-1.1.2.jar;W:\Zeichnung
-d
W:\Zeichnung\doc
-encoding
windows-1252
-charset
windows-1252
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
W:\Zeichnung\Haus.java
<---- end of javadoc command ---->
Loading source file W:\Zeichnung\Haus.java...
W:\Zeichnung\Haus.java:6: error: '.' expected
import Kreis;
            ^
W:\Zeichnung\Haus.java:6: error: ';' expected
import Kreis;
             ^
W:\Zeichnung\Haus.java:7: error: class, interface, or enum expected
import Quadrat;
       ^
W:\Zeichnung\Haus.java:8: error: '.' expected
import Dreieck;
              ^
W:\Zeichnung\Haus.java:8: error: ';' expected
import Dreieck;
               ^
W:\Zeichnung\Haus.java:14: error: '(' or '[' expected
    Quadrat kevin = new Quadrat;
                               ^
W:\Zeichnung\Haus.java:15: error: '(' or '[' expected
    Quadrat fenster = new Quadrat;
                                 ^
W:\Zeichnung\Haus.java:16: error: '(' or '[' expected
    Dreieck dach = new Dreieck;
                              ^
W:\Zeichnung\Haus.java:17: error: '(' or '[' expected
    Kreis fenster = new Kreis;
                             ^
W:\Zeichnung\Haus.java:19: error: <identifier> expected
    kevin.farbeAendern("");
                      ^
W:\Zeichnung\Haus.java:19: error: illegal start of type
    kevin.farbeAendern("");
                       ^
W:\Zeichnung\Haus.java:20: error: <identifier> expected
    fenster.
            ^
W:\Zeichnung\Haus.java:22: error: ';' expected
    public Haus()
          ^
W:\Zeichnung\Haus.java:22: error: illegal start of type
    public Haus()
               ^
W:\Zeichnung\Haus.java:22: error: <identifier> expected
    public Haus()
                ^
W:\Zeichnung\Haus.java:22: error: ';' expected
    public Haus()
                 ^
W:\Zeichnung\Haus.java:29: error: class, interface, or enum expected
}
^
17 errors
